# AICE-Catalyst-Agent

./: README.md  pyproject.toml
examples/: input1.txt  input2.txt  input3.txt  input4.txt  output1.json  output2.json  output3.json
src/: control_flow.py  main.py  prompts.py  steps_planner.py  structures.py  test_tools.py  tools.py
