[project]
name = "aice-catalyst-agent"
version = "0.1.0"
description = "An AI agent capable of generating a structured project plan from raw business requirements."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "pydantic>=2.12.3",
]
